CRUD:assignment and user/me route
