# backend/src/api/v1/user/controllers/userSelf.js
@@ -1,25 +1,65 @@
 const userServices = require("../../../../lib/user");
-const { authenticationError } = require("../../../../lib/utils/error");
-
+const { User } = require("../../../../models");
 const userSelf = async (req, res, next) => {
-  // const { id } = req.user;
-  const { populate } = req.query || "";
-  // Check if the user is authenticated
+  const userId = req.user.id?.toString();
+  // console.log(userId);
+
   try {
-    if (!req.user) {
-      throw authenticationError("Unauthorized");
-    }
-    const user = await userServices.userSelf({ id: req.user.id, populate });
-    const { id: userId } = user;
-    const response = {
-      id: userId,
-      data: user,
-      links: {
-        self: `/users/${userId}`,
-      },
+    const getUserWithTasks = async (userId) => {
+      try {
+        const user = await User.findById(userId)
+          .select("name email avatar createdAt updatedAt")
+          .populate([
+            {
+              path: "tasks",
+              model: "Task",
+              select: "title duedate status priority user_id",
+              populate: {
+                path: "user_id",
+                model: "User",
+                select: "name email",
+              },
+            },
+            {
+              path: "assignedTasks",
+              model: "Assignment",
+              select: "role createdAt updatedAt",
+              populate: [
+                {
+                  path: "task_id",
+                  model: "Task",
+                  select: "title duedate status priority user_id",
+                  populate: {
+                    path: "user_id",
+                    model: "User",
+                    select: "name email",
+                  },
+                },
+                {
+                  path: "user_id",
+                  model: "User",
+                  select: "name email",
+                },
+              ],
+            },
+          ]);
+        console.log(user);
+
+        if (!user) {
+          throw notFound("User not found");
+        }
+
+        return user;
+      } catch (error) {
+        throw error;
+      }
     };
 
-    res.status(200).json(response);
+    const userData = await getUserWithTasks(userId);
+    return res.status(200).json({
+      message: "User data fetched successfully",
+      data: userData,
+    });
   } catch (error) {
     next(error);
   }
